--- a/styles/main.css
+++ b/styles/main.css
@@ -5,5 +5,22 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     background-color: #181527;
+    color: #d8d3ec;
+}
+
+.pink-text {
     color: #cb8ea3;
+}
+
+.purple-text {
+    color: #9a4488;
+}
+
+.white-text {
+    color: #d8d3ec;
+}
+
+h4 {
+    padding-top: 1em;
+    margin-left: 1em;
 }
